--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ nav {
 }
 .side-nav a:hover {
   color: #333;
-  text-decoration: underline;
+  background-color: #d9d9d9;
 }
 .l-1 {
   width: 2px;
