--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ td {
   padding: 1rem;
   text-align: center;
 }
-.h-cart{
+.h-cart {
   height: 70vh;
   overflow-y: scroll;
 }
@@ -489,4 +489,23 @@ th {
 .table-container {
   height: 75vh;
   overflow-y: scroll;
+}
+.btn-cart {
+  border: none;
+  background-color: #1c23f500;
+  font-size: 4vh;
+  color: #fff;
+  padding: 3rem;
+  border-radius: 25%;
+  transition: all 0.3s;
+}
+.btn-cart:hover {
+  background-color: rgba(51, 51, 51, 0.4);
+  transform: scale(1.1);
+}
+.PENDING {
+  background-color: #edc100;
+}
+.COMPLETED {
+  background-color: rgb(9, 168, 9);
 }
